added logger in test file and added dependency in tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -73,3 +73,8 @@ commands=
     bash.exe -c 'python -m pip install --upgrade "$(ls dist/libp2p-*-py3-none-any.whl)" --progress-bar off'
     python -c "import libp2p"
 skip_install=true
+
+[testenv:docs]
+extras=.
+commands =
+    make check-docs-ci
